--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ li {
   width: 100%;
   padding: 0 25px;
   padding-top: 75px;
-  background: linear-gradient(180deg, #ff8f70, #ff3d54), url(../../images/bg-pattern-intro.svg);
+  background: linear-gradient(180deg, #ff8f70, #ff3d54), url(../images/bg-pattern-intro.svg);
   background-blend-mode: lighten;
   background-position: 0 0, 36% 33%;
   background-size: 400%;
@@ -287,7 +287,7 @@ li {
 
 @media only screen and (min-width: 1366px) {
   .cta {
-    background: linear-gradient(150deg, #ff8f70, #ff3d54), url(../../images/bg-pattern-intro.svg);
+    background: linear-gradient(150deg, #ff8f70, #ff3d54), url(../images/bg-pattern-intro.svg);
     background-size: 250%;
     background-position: 0 0, 25% 50%;
     background-blend-mode: hue; } }
