--- a/scss/3-layout/_features.scss
+++ b/scss/3-layout/_features.scss
@@ -15,7 +15,7 @@
         margin-top: 250px;
         padding: 225px 25px 125px 25px;
         border-radius: 0 100px 0 100px;
-        background: linear-gradient(180deg,hsl(237, 17%, 21%), hsl(237, 23%, 32%)), url(../../images/bg-pattern-circles.svg);
+        background: linear-gradient(180deg,hsl(237, 17%, 21%), hsl(237, 23%, 32%)), url(../images/bg-pattern-circles.svg);
         background-blend-mode: lighten;
         background-size: cover;
         background-repeat: no-repeat;
